--- a/src/main/resources/db/changelog/templates/liquibase.properties
+++ b/src/main/resources/db/changelog/templates/liquibase.properties
@@ -1,6 +1,6 @@
-driver=com.mysql.cj.jdbc.Driver
-classpath=/opt/lib/mysql-connector-java-8.0.23.jar
-url=jdbc:mysql://database-dev.c1i0i2cgwfwb.us-east-2.rds.amazonaws.com:3306/database_dev
-username=admin
-password=admin123
 changeLogFile=src/main/resources/db/changelog/db.changelog-master.xml
+url=jdbc:mysql://database1.cb4kk8iiuvdy.ap-south-1.rds.amazonaws.com:3306/AKASH
+username=admin
+password=Admin12345
+driver=com.mysql.cj.jdbc.Driver
+classpath=lib/mysql-connector-java-8.0.32.jar
