--- a/src/main/resources/db/changelog/templates/application.properties
+++ b/src/main/resources/db/changelog/templates/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://database-dev.c1i0i2cgwfwb.us-east-2.rds.amazonaws.com:3306/database_dev
+spring.datasource.url=jdbc:mysql://database1.cb4kk8iiuvdy.ap-south-1.rds.amazonaws.com:3306/AKASH
 spring.datasource.username=admin
-spring.datasource.password=admin123
+spring.datasource.password=admin12345
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
